Fix alignment of kokeshi info

--- a/static/scss/styles.scss
+++ b/static/scss/styles.scss
@@ -102,6 +102,10 @@ p {
     }
   }
 
+  &:active {
+    visibility: hidden;
+  }
+
   &::before {
     content: '';
     position: absolute;
@@ -213,9 +217,12 @@ p {
   margin-left: 8%;
   margin-right: auto;
   position: absolute;
-  text-align: center;
   top: 250px;
   width: 80%;
+}
+
+.info {
+  text-align: center;
 }
 
 .kokeshi-message {
